[package]
name = "prism2"
version = "0.1.2"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/ramp-stack/prism.git"
description = "A GUI abstraction library for building UI kits"
documentation = "https://docs.rs/prism2"


[dependencies]
anyanymap = "1.0.2"
downcast-rs = "2.0.2"
uuid = { version = "1.16.0", features = ["v4", "js"] }
wgpu_canvas = {version="5.0.5", default-features = false}
#wgpu_canvas = {path="../wgpu_canvas", default-features = false}
prism_proc = "0.1.1" 
image = "0.25.9"
include_dir = "0.7.4"
nsvg = "0.5.1"
dyn-clone = "1.0.20"
